cmake_minimum_required(VERSION 3.15...3.30)
include(cmake/prefix.cmake)
project(devcore Fortran C CXX)
include(cmake/postfix.cmake)

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
  include(pythonvenv)
  include(catch2)
  include(boost)
  include(eigen3)
  include(googletest)
  include(pybind11)
  include(nanobind)
  include(standards)
  include(lattice)
  include(bcl)
  include(pyalea)
  include(itensor)
  FetchContent_MakeAvailable(${FetchContents})
endif()

add_subdirectory(example)
